Changed 'Dislpay' component to 'CalcDisplay' to avoid confusion with CSS property 'display'. Created colors close to the example image. Created round buttons with the appropriate colors and borders. Working on spacing and font size.

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,26 @@
 .app {
   display: flex;
-  background: yellow;
-  color: blue;
+  height: 100%;
+}
+
+.calc-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-color: #2d2d86;
 }
 
 .header {
   display: flex;
-  background: green;
-  color: Red;
+  background-color: #5752a7;
+  color: #b3b3e6;
+  height: 10em;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #2d2d86;
+
+}
